Add subgraph and subgraph-min outputs
This adds "subgraph" (w0z + 2 variables) and "subgraph-min" (w0z +
"real" changed variables) output formats and functionality to the zone
abstract domain.  Interval and Predicate analysis output the same
changed variable reports to ensure consistency and aid processing.

Signed-off-by: Kenny Ballou <kb@devnulllabs.io>